<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Архивный фонд</string>
    
    <!-- Menu Items -->
    <string name="menu_data">Данные</string>
    <string name="menu_students">Студенты</string>
    <string name="menu_directory">Справочник</string>
    <string name="menu_print">Печать</string>
    
    <!-- Authorization -->
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="btn_login">Вход</string>
    <string name="error_empty_login">Не введен логин!</string>
    <string name="error_empty_password">Не введен пароль!</string>
    <string name="error_login_not_found">Данный логин не найден!</string>
    <string name="error_invalid_credentials">Неверный логин или пароль!</string>
    
    <!-- Main Screen -->
    <string name="hint_search">Поиск…</string>
    <string name="status_ready">Готов к работе</string>
    <string name="add_item">Добавить элемент</string>
    <string name="rows_received">получено %d строк</string>
    
    <!-- Student Form -->
    <string name="hint_full_name">ФИО студента</string>
    <string name="label_group">Группа</string>
    <string name="label_admission_year">Год поступления</string>
    <string name="label_deduction_year">Год отчисления</string>
    <string name="hint_admission_year">Год поступления</string>
    <string name="hint_deduction_year">Год отчисления</string>
    <string name="checkbox_no_save_date">Не сохранять</string>
    <string name="checkbox_move_to_deleted">Переместить в удаленные?</string>
    <string name="hint_reason">Причина отчисления</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_cancel">Отмена</string>
    <string name="error_empty_fullname">Не введено ФИО студента!</string>
    
    <!-- Box Form -->
    <string name="label_rack_number">Номер стеллажа</string>
    <string name="label_shelf_number">Номер полки</string>
    <string name="label_box_name">Имя коробки</string>
    <string name="label_target_group">Целевая группа</string>
    <string name="label_target_type">Целевой тип</string>
    <string name="label_work_year">Год работы</string>
    <string name="hint_box_name">Box:1-1</string>
    
    <!-- Document Form -->
    <string name="label_document_subject">Тема документа</string>
    <string name="label_creation_year">Год создания</string>
    <string name="label_document_type">Тип документа</string>
    <string name="label_supervisor">ФИО руководителя</string>
    <string name="label_student">Студент</string>
    <string name="label_storage_box">Коробка хранения</string>
    <string name="checkbox_deleted_document">Удаленный документ?</string>
    <string name="error_empty_subject">Не введена тема документа!</string>
    <string name="error_empty_type">Не выбран тип документа!</string>
    <string name="error_empty_student">Не выбран студент!</string>
    
    <!-- Group Form -->
    <string name="label_group_name">Название группы</string>
    <string name="label_formation_year">Год формирования</string>
    <string name="label_specialization">Специализация</string>
    <string name="error_empty_group_name">Не введено название группы!</string>
    <string name="error_empty_specialization">Не введена специализация!</string>
    
    <!-- User Form -->
    <string name="label_fio">ФИО</string>
    <string name="label_role">Роль</string>
    <string name="btn_backup">Создать резервную копию</string>
    <string name="btn_restore">Восстановить копию</string>
    <string name="hint_group_name">Гр-1а</string>
    
    <!-- Document Type Form -->
    <string name="label_type_name">Название типа</string>
    <string name="hint_type_name">Экзамен, зачет, лекция…</string>
    <string name="error_empty_type_name">Не введено название типа!</string>
    <string name="hint_login_placeholder">Ivanov_II</string>
    
    <!-- Arrays for Spinners -->
    <string-array name="roles_array">
        <item>Admin</item>
        <item>Manager</item>
    </string-array>
    
    <!-- Common -->
    <string name="title_add">Добавление</string>
    <string name="title_edit">Изменение</string>
    <string name="confirm_delete">Вы уверены, что хотите удалить?</string>
    <string name="success">Успешно</string>
    <string name="error">Ошибка</string>
</resources>
